--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
         <link rel="stylesheet" href="css/leaflet.css"><link rel="stylesheet" href="css/L.Control.Locate.min.css">
         <link rel="stylesheet" href="css/qgis2web.css"><link rel="stylesheet" href="css/fontawesome-all.min.css">
         <style>
-        #map {
-            width: 795px;
-            height: 579px;
+            html, body, #map {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
         }
         </style>
         <title></title>
+    </head>
+    <div class="section-heading">
+        <h2 align="center"> PETA KEPADATAN PENDUDUK KALURAHAN SUMBERAGUNG</h2>
+        <div class="line-dec"></div>
+        </div>
     </head>
     <body>
         <div id="map">
